--- a/documentation/modules/ROOT/pages/index.adoc
+++ b/documentation/modules/ROOT/pages/index.adoc
@@ -23,4 +23,5 @@ This tutorial helps you to get started with the open-source change data capture 
 
 * xref:20-dbz-kafka-connect.adoc[Apache Kafka Connect]
 * xref:21-dbz-server.adoc[Debezium Server]
+* xref:22-dbz-ui.adoc[Debezium UI]
 
