update all images from 2.6 to 2.6.0.Final after availability on quay

--- a/documentation/modules/ROOT/pages/20-dbz-kafka-connect.adoc
+++ b/documentation/modules/ROOT/pages/20-dbz-kafka-connect.adoc
@@ -59,7 +59,7 @@ Podman::
 [.console-input]
 [source,adoc]
 ----
-podman run -it --rm --name postgres --pod dbz -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres quay.io/debezium/example-postgres:2.6
+podman run -it --rm --name postgres --pod dbz -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres quay.io/debezium/example-postgres:2.6.0.Final
 ----
 --
 Docker::
@@ -68,7 +68,7 @@ Docker::
 [.console-input]
 [source,adoc]
 ----
-docker run -it --rm --name postgres -p 5432:5432 -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres quay.io/debezium/example-postgres:2.6
+docker run -it --rm --name postgres -p 5432:5432 -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres quay.io/debezium/example-postgres:2.6.0.Final
 ----
 --
 ==== 
@@ -83,7 +83,7 @@ Podman::
 [.console-input]
 [source,adoc]
 ----
-podman run -it --rm --name connect --pod dbz -e GROUP_ID=1 -e CONFIG_STORAGE_TOPIC=my_connect_configs -e OFFSET_STORAGE_TOPIC=my_connect_offsets -e STATUS_STORAGE_TOPIC=my_connect_statuses quay.io/debezium/connect:2.6
+podman run -it --rm --name connect --pod dbz -e GROUP_ID=1 -e CONFIG_STORAGE_TOPIC=my_connect_configs -e OFFSET_STORAGE_TOPIC=my_connect_offsets -e STATUS_STORAGE_TOPIC=my_connect_statuses quay.io/debezium/connect:2.6.0.Final
 ----
 --
 Docker::
@@ -92,7 +92,7 @@ Docker::
 [.console-input]
 [source,adoc]
 ----
-docker run -it --rm --name connect -p 8083:8083 -e GROUP_ID=1 -e CONFIG_STORAGE_TOPIC=my_connect_configs -e OFFSET_STORAGE_TOPIC=my_connect_offsets -e STATUS_STORAGE_TOPIC=my_connect_statuses --link kafka:kafka --link postgres:postgres quay.io/debezium/connect:2.6
+docker run -it --rm --name connect -p 8083:8083 -e GROUP_ID=1 -e CONFIG_STORAGE_TOPIC=my_connect_configs -e OFFSET_STORAGE_TOPIC=my_connect_offsets -e STATUS_STORAGE_TOPIC=my_connect_statuses --link kafka:kafka --link postgres:postgres quay.io/debezium/connect:2.6.0.Final
 ----
 --
 ==== 
@@ -271,7 +271,7 @@ Podman::
 [.console-input]
 [source,adoc]
 ----
-podman run -it --rm --name watcher --pod dbz quay.io/debezium/kafka:2.6 watch-topic -a -k dbserver1.inventory.customers
+podman run -it --rm --name watcher --pod dbz quay.io/debezium/kafka:2.6.0.Final watch-topic -a -k dbserver1.inventory.customers
 ----
 [.console-output]
 [source,adoc]
@@ -288,7 +288,7 @@ Docker::
 [.console-input]
 [source,adoc]
 ----
-docker run -it --rm --name watcher --link kafka:kafka quay.io/debezium/kafka:2.6 watch-topic -a -k dbserver1.inventory.customers
+docker run -it --rm --name watcher --link kafka:kafka quay.io/debezium/kafka:2.6.0.Final watch-topic -a -k dbserver1.inventory.customers
 ----
 [.console-output]
 [source,adoc]
@@ -572,7 +572,7 @@ Podman::
 [.console-input]
 [source,adoc]
 ----
-podman run -it --rm --name connect --pod dbz -e GROUP_ID=1 -e CONFIG_STORAGE_TOPIC=my_connect_configs -e OFFSET_STORAGE_TOPIC=my_connect_offsets -e STATUS_STORAGE_TOPIC=my_connect_statuses quay.io/debezium/connect:2.6
+podman run -it --rm --name connect --pod dbz -e GROUP_ID=1 -e CONFIG_STORAGE_TOPIC=my_connect_configs -e OFFSET_STORAGE_TOPIC=my_connect_offsets -e STATUS_STORAGE_TOPIC=my_connect_statuses quay.io/debezium/connect:2.6.0.Final
 ----
 --
 Docker::
@@ -581,7 +581,7 @@ Docker::
 [.console-input]
 [source,adoc]
 ----
-docker run -it --rm --name connect -p 8083:8083 -e GROUP_ID=1 -e CONFIG_STORAGE_TOPIC=my_connect_configs -e OFFSET_STORAGE_TOPIC=my_connect_offsets -e STATUS_STORAGE_TOPIC=my_connect_statuses --link kafka:kafka --link postgres:postgres quay.io/debezium/connect:2.6
+docker run -it --rm --name connect -p 8083:8083 -e GROUP_ID=1 -e CONFIG_STORAGE_TOPIC=my_connect_configs -e OFFSET_STORAGE_TOPIC=my_connect_offsets -e STATUS_STORAGE_TOPIC=my_connect_statuses --link kafka:kafka --link postgres:postgres quay.io/debezium/connect:2.6.0.Final
 ----
 --
 ==== 
